--- a/Configs/baseline.yaml
+++ b/Configs/baseline.yaml
@@ -11,7 +11,7 @@ logging:
       path: "Logs/baseline.log"
   levels_override:
     capsule.encode: "debug"
-    router.local_hebb: "trace"
+    router.spike: "trace"
     ui.pipeline: "info"
   timestamp_kind: "relative"
 
@@ -20,10 +20,9 @@ process_registry:
   capsule.base_b: "capsule.base_b"
   capsule.to_energies: "capsule.to_energies"
   capsule.from_energies: "capsule.from_energies"
-  router.forward: "router.forward"
-  router.backward: "router.backward"
-  router.local_hebb: "router.local_hebb"
-  router.checkpoint: "router.checkpoint"
+  router.step: "router.step"
+  router.spike: "router.spike"
+  router.output: "router.output"
   trainer.loop: "trainer.loop"
   trainer.eval: "trainer.eval"
   ui.pipeline: "ui.pipeline"
@@ -53,40 +52,30 @@ capsule:
 router:
   layers: 10
   nodes_per_layer: 1024
-  prototypes:
-    count: 64
-    hidden_dim: 8
-  neighbors:
-    local: 8
-    jump: 2
+  snn:
+    parameter_count: 512
+    decay: 0.92
+    threshold: 0.8
+    reset_value: 0.0
+    delta_x_range: [1, 4]
+    delta_y_range: [-128, 128]
+    surrogate: "fast_sigmoid"
+    dt: 1
   alpha: 0.9
-  tau: 3.0
-  top_k: 4
+  energy_floor: 1.0e-5
   energy_constraints:
-    max_dx: 10
-    min_dx: 1
-    max_dy: 64
     energy_base: 100
-  optimizer:
-    type: "adam"
-    lr: 1.0e-3
-    beta1: 0.9
-    beta2: 0.999
-    eps: 1.0e-8
-  entropy_reg: 0.01
-  batch_size: 32
-  epochs: 5
-  backend: "cpu"
-  task: "addition"
-  headless: false
-  checkpoints:
-    every_steps: 100
-    keep: 5
-  local_learning:
-    enabled: false
-    rho: 0.9
-    lr: 1.0e-4
-    baseline_beta: 0.95
+  training:
+    optimizer:
+      type: "adam"
+      lr: 1.0e-3
+      beta1: 0.9
+      beta2: 0.999
+      eps: 1.0e-8
+    losses:
+      energy_balance_weight: 1.0
+      jump_penalty_weight: 1.0e-2
+      spike_rate_target: 0.1
 
 ui:
   enabled: true
